# DeadDrop

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  compose.yaml  render.yaml  spec.md  todo.md
.github/workflows/: ci.yaml  release.yaml
docs/: agents.md  architecture.md  demo-script.md  deployment.md  fresh-agent-handoff.md  releases.md  worker-service.md
e2e/: test_workflow.py
examples/demo-repo/: README.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/lib/: articles.ts  marks.ts
plans/: 000-product-roadmap.md  001-secure-production-dependencies.md  README.md  pmf.md
server/: .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt
server/app/: auth.py  db.py  main.py  models.py  schemas.py
server/app/static/: styles.css
server/app/templates/: _job_receipt.html  base.html  blog.html  blog_disposable_worktrees.html  blog_evidence_receipts.html  blog_leases.html  dashboard.html  demo.html  docs.html  job_detail.html  landing.html  login.html  new_job.html  public_architecture.html  public_base.html  updates.html
server/migrations/: env.py
server/migrations/versions/: 0001_baseline.py  0002_job_leases.py  0003_patch_handoff.py  0004_job_agent.py
server/tests/: test_api.py  test_invariants.py  test_job_routing.py
worker/: README.md  client.go  client_test.go  config.go  deaddrop.manifest.example.json  go.mod  main.go  presets.go  presets_test.go  process_darwin.go  process_windows.go  runner.go  runner_test.go
(+6 files in other folders)
