[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.139.2",
    "jinja2>=3.1.6",
    "psycopg[binary]",
    "python-multipart>=0.0.32",
    "sqlalchemy",
    "uvicorn[standard]",
]

[dependency-groups]
dev = ["httpx", "pip-audit", "pytest>=9.1.1"]
